# cicd_demodemo

./: CMakeLists.txt  README.md
.github/workflows/: ci-cd.yml
include/: math_utils.h
src/: main.cpp  math_utils.cpp
tests/: test_math.cpp
